actually we dont need to remove /home/node

--- a/'legacy versions' example/Dockerfile
+++ b/'legacy versions' example/Dockerfile
@@ -4,7 +4,7 @@ USER root
 
 # delete node 6.11 files
 RUN rm -f /usr/local/bin/node /usr/local/bin/nodejs /usr/local/bin/npm /usr/local/share/man/man1/node.1 /usr/local/share/systemtap/tapset/node.stp
-RUN rm -rf /usr/local/lib/node_modules /usr/local/include/node /usr/local/share/doc/node /home/node
+RUN rm -rf /usr/local/lib/node_modules /usr/local/include/node /usr/local/share/doc/node
 
 # download node 6.8.1 from here: https://nodejs.org/en/download/releases
 RUN wget https://nodejs.org/download/release/v6.8.1/node-v6.8.1.tar.gz
